update arrow size and fix digital image overflow

--- a/src/pages/digital.scss
+++ b/src/pages/digital.scss
@@ -66,8 +66,10 @@
       }
     }
   }
-  #XHS_landing, #happy_winter {
-    max-width: 800px;
+  #XHS_landing {
+    width: 800px;
   }
-
+  #happy_winter {
+    width: 600px;
+  }
 }
